[workspace]
members = ["cli", "derive", "mp4san", "test", "test-gen"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"

rust-version = "1.61.0"

repository = "https://github.com/privacyresearchgroup/mp4san"
license = "MIT"
categories = ["multimedia::video"]
keywords = ["mp4", "sanitizer", "video", "media"]

readme = "README.md"
exclude = ["/.github", ".*", "tests/test-data/"]
