[workspace]
members = ["cli", "common", "mp4san", "mp4san-derive", "mp4san-dump", "mp4san-test", "mp4san-test-gen", "webpsan", "webpsan-test"]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2021"

rust-version = "1.61.0"

repository = "https://github.com/privacyresearchgroup/mp4san"
license = "MIT"

exclude = ["/.github", ".*", "/test-data/"]
