[workspace]
members = ["cli", "common", "mp4san", "mp4san-derive", "mp4san-test", "mp4san-test-gen", "webpsan", "webpsan-test"]
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2021"

rust-version = "1.66.0"

repository = "https://github.com/privacyresearchgroup/mp4san"
license = "MIT"

exclude = ["/.github", ".*", "/test-data/"]

[workspace.dependencies]
ac-ffmpeg = "0.18.1"
afl = "0.12.16"
anyhow = "1.0.68"
assert_matches = "1.5.0"
bindgen = "0.69.4"
bitflags = "2.4.0"
bitstream-io = "1.7.0"
bytes = "1.3.0"
cc = "1.0.79"
clap = "4.0.32"
criterion = "0.5.1"
derive-where = "1.1.0"
derive_builder = "0.20.2"
derive_more = "2.0.0"
downcast-rs = "1.2.0"
dyn-clonable = "0.9.0"
env_logger = "0.11.3"
ffmpeg-sys-next = { version = "7.0.0", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
libflate = "2.1.0"
libwebp-sys = "0.9.4"
log = "0.4.17"
num-integer = { version = "0.1.45", default-features = false }
num-traits = { version = "0.2.16", default-features = false }
paste = "1.0.14"
pkg-config = "0.3.26"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
thiserror = "1.0.38"
uuid = "1.3"
