[package]
name = "mediasan-cli"
edition = "2021"
version = "0.1.0"

publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mp4san = { path = "../mp4san" }
webpsan = { path = "../webpsan" }
env_logger = { workspace = true }
log = { workspace = true }
