[package]
name = "mediasan-common"
description = "Common library shared by the mediasan media file sanitizer tools."
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true
categories = ["multimedia"]
keywords = ["sanitizer", "media"]

readme = "../README.md"
exclude.workspace = true

[dependencies]
bytes = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut", "display"] }
futures-util = { workspace = true, features = ["io"] }
thiserror = { workspace = true }
