[package]
name = "mp4san_derive"
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

readme.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
uuid = "1.3"
