[package]
name = "mp4san-derive"
description = "Derive macros for the mp4san crate."
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true
categories = ["multimedia::video"]
keywords = ["mp4", "sanitizer", "video", "media"]

readme = "../mp4san/README.md"
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
uuid = { workspace = true }
