[package]
name = "mp4san-test-gen"
edition = "2021"
version = "0.1.0"

publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libflate = { workspace = true }
log = { workspace = true }
mp4san = { path = "../mp4san" }
