[package]
name = "mp4san-test"
edition.workspace = true
version.workspace = true

publish = false

[features]
default = []
ffmpeg = ["dep:ac-ffmpeg", "dep:bindgen", "dep:cc", "dep:ffmpeg-sys-next"]
gpac = ["dep:bindgen", "dep:cc", "dep:pkg-config"]

[dependencies]
ac-ffmpeg = { workspace = true, optional = true }
ffmpeg-sys-next = { workspace = true, default-features = false, features = ["avformat"], optional = true }
log = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
bindgen = { workspace = true, optional = true }
cc = { workspace = true, optional = true }
pkg-config = { workspace = true, optional = true }
