[package]
name = "mp4san"
description = "An MP4 file sanitizer."
version = "0.1.1"
edition = "2021"

rust-version = "1.61.0"

repository = "https://github.com/privacyresearchgroup/mp4san"
license = "MIT"
categories = ["multimedia::video"]
keywords = ["mp4", "sanitizer", "video", "media"]

exclude = ["/.github", ".*", "tests/test-data/"]

[dependencies]
bytes = "1.3.0"
derive-where = "1.1.0"
derive_builder = "0.12.0"
derive_more = "0.99.17"
downcast-rs = "1.2.0"
dyn-clonable = "0.9.0"
error-stack = "0.3.1"
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
log = "0.4.17"
thiserror = "1.0.38"

[dev-dependencies]
assert_matches = "1.5.0"
env_logger = "0.10.0"
libflate = "1.2.0"
mp4san-test = { path = "../test" }
