[package]
name = "mp4san"
description = "An MP4 file sanitizer."
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true
categories = ["multimedia::video"]
keywords = ["mp4", "sanitizer", "video", "media"]

readme = "README.md"
exclude.workspace = true

[dependencies]
bytes = "1.3.0"
derive-where = "1.1.0"
derive_builder = "0.12.0"
derive_more = "0.99.17"
downcast-rs = "1.2.0"
dyn-clonable = "0.9.0"
fixed = { version = "1.23.1", default-features = false }
futures-util = { version = "0.3.28", default-features = false, features = ["io"] }
half = { version = "1.8.2", default-features = false }
log = "0.4.17"
mediasan-common = { path = "../common", version = "=0.5.0" }
mp4san-derive = { path = "../mp4san-derive", version = "=0.5.0" }
nalgebra = { version = "0.32.3", default-features = false }
nonempty = "0.8.1"
paste = "1.0.14"
thiserror = "1.0.38"

[dev-dependencies]
assert_matches = "1.5.0"
mediasan-common-test = { path = "../common-test" }
mp4san-test = { path = "../mp4san-test" }
