[package]
name = "mp4san"
description = "An MP4 file sanitizer."
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true
categories = ["multimedia::video"]
keywords = ["mp4", "sanitizer", "video", "media"]

readme = "README.md"
exclude.workspace = true

[dependencies]
bytes = { workspace = true }
derive-where = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
downcast-rs = { workspace = true }
dyn-clonable = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
log = { workspace = true }
mediasan-common = { path = "../common", version = "=0.5.3" }
mp4san-derive = { path = "../mp4san-derive", version = "=0.5.3" }
paste = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
mediasan-common-test = { path = "../common-test" }
mp4san-test = { path = "../mp4san-test" }
