[package]
name = "webpsan"
description = "An WebP file sanitizer."
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true
categories = ["multimedia::images"]
keywords = ["webp", "sanitizer", "images", "media"]

readme = "README.md"
exclude.workspace = true

[features]
default = ["error-detail"]
error-detail = []

[dependencies]
assert_matches = "1.5.0"
bitflags = "2.4.0"
bitstream-io = "1.7.0"
bytes = "1.3.0"
derive_builder = "0.12.0"
derive_more = "0.99.17"
log = "0.4.17"
mediasan-common = { path = "../common", version = "=0.5.0" }
num-integer = { version = "0.1.45", default-features = false }
num-traits = { version = "0.2.16", default-features = false }
thiserror = "1.0.38"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = { version = "0.5.1", features = ["async_futures"] }
mediasan-common-test = { path = "../common-test" }
webpsan-test = { path = "../webpsan-test" }

[[bench]]
name = "bitstream"
harness = false
