[package]
name = "webpsan"
description = "An WebP file sanitizer."
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true
categories = ["multimedia::images"]
keywords = ["webp", "sanitizer", "images", "media"]

readme = "README.md"
exclude.workspace = true

[features]
default = ["error-detail"]
error-detail = []

[dependencies]
assert_matches = { workspace = true }
bitflags = { workspace = true }
bitstream-io = { workspace = true }
bytes = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
log = { workspace = true }
mediasan-common = { path = "../common", version = "=0.5.3" }
num-integer = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true, features = ["async_futures"] }
mediasan-common-test = { path = "../common-test" }
webpsan-test = { path = "../webpsan-test" }

[[bench]]
name = "bitstream"
harness = false
