[workspace]
members = ["."]

[package]
name = "webpsan-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
webpsan = { path = ".." }

[profile.release]
debug = 1

[[bin]]
name = "sanitize"
path = "fuzz_targets/sanitize.rs"
test = false
doc = false
